--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs port2">
-                        <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive portfolio-image port1" alt="">
+                        <img src="assets/img/portfolio/VinosMain.png" class="img-responsive portfolio-image port1" alt="">
                     </div>
                 </div>
             </div>
@@ -417,7 +417,7 @@
                         </div>
                     </div>
                     <div class="col-md-8 col-md-pull-4 hidden-xs">
-                        <img src="assets/img/portfolio/tablet-screens.png" class="img-responsive portfolio-image" alt="">
+                        <img src="assets/img/portfolio/tablet-screens1.png" class="img-responsive portfolio-image" alt="">
                     </div>
                 </div>
             </div>
@@ -711,7 +711,11 @@
                             <p>We did a full makeover of Vino's Pizza online web presence.  Vino's Pizza is located in Lafayette Hill, PA just outside of Philadelphia and make some of the best pizzas you will ever have.  The problem was, the online customer was having a hard time finding out about that.  We went on a journey to fix this.
                             <br><br>
                             We started off by doing a full redesign of their "website" from the ground up.  We concentrated on the fact that most people search for restaurant menus and directions from their cell phone, which is why our first priority was the optimal functionality on mobile devices.
-                            <br><br>
+                            <br>
+							<div class="col-lg-12">
+                            <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
+							</div>
+							<br>
                             Next, we optimized their listings in websites like Yelp, Google+, Facebook, Menupages... so that the customer sees the most up to date information as well as some gorgeous pictures of thier pies.
                             <br><br>
                             Finally, we took their brand to social media and began activly engaging with the customer.  Be it proving information about events, specials, or just responding to reviews and questions. This allowed for greatly improved SEO on the major search engines.
@@ -720,7 +724,7 @@
                             </p>
                         </div>
                         <div class="col-lg-12">
-                            <img src="assets/img/portfolio/mobile-screens.png" class="img-responsive img-centered" alt="">
+                            <img src="assets/img/portfolio/VinosMacbook.png" class="img-responsive img-centered" alt="" style="max-height:400px; margin-right:auto; margin-left:auto;>
                         </div>
                         <div class="col-lg-8 col-lg-offset-2">
                             <ul class="list-inline item-details">
